--- a/app/views/cars/final_validation.html.erb
+++ b/app/views/cars/final_validation.html.erb
@@ -135,14 +135,15 @@
         <% if @car.photo_1.file.nil?%>
           <div >  <%= image_tag "avantgarde-concept-769583-unsplash.jpg", width: 400%></div>
         <% else %>
-        <div class="carousel">
+
+<!--         <div class="carousel">
           <input type="radio" id="carousel-4" name="carousel[]" checked>
           <input type="radio" id="carousel-5" name="carousel[]">
           <input type="radio" id="carousel-6" name="carousel[]">
           <ul class="carousel__items">
-            <li class="carousel__item"><img src="<%= damage.picture_1%>" alt=""></li>
-            <li class="carousel__item"><img src="<%= damage.picture_2%>" alt=""></li>
-            <li class="carousel__item"><img src="<%= damage.picture_3%>" alt=""></li>
+            <li class="carousel__item"><img src="<#%= damage.picture_1%>" alt=""></li>
+            <li class="carousel__item"><img src="<#%= damage.picture_2%>" alt=""></li>
+            <li class="carousel__item"><img src="<#%= damage.picture_3%>" alt=""></li>
           </ul>
            <div class="carousel__prev">
             <label for="carousel-4"></label>
@@ -159,7 +160,36 @@
              <label for="carousel-5"></label>
              <label for="carousel-6"></label>
            </div>
-         </div>
+        </div> -->
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="<%= damage.picture_1%>" alt="">
+            </div>
+
+            <div class="item">
+              <img src="<%= damage.picture_2%>" alt="">
+            </div>
+
+            <div class="item">
+              <img src="<%= damage.picture_3%>" alt="">
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
          <% end %>
        </div>
       <div class="button-damage">
