--- a/app/views/shared/_car-damages-carousel.html.erb
+++ b/app/views/shared/_car-damages-carousel.html.erb
@@ -1,11 +1,11 @@
-<div class="carousel">
+<!-- <div class="carousel">
   <input type="radio" id="carousel-4" name="carousel[]" checked>
   <input type="radio" id="carousel-5" name="carousel[]">
   <input type="radio" id="carousel-6" name="carousel[]">
   <ul class="carousel__items">
-    <li class="carousel__item"><img src="<%= damage.picture_1%>" alt=""></li>
-    <li class="carousel__item"><img src="<%= damage.picture_2%>" alt=""></li>
-    <li class="carousel__item"><img src="<%= damage.picture_3%>" alt=""></li>
+    <li class="carousel__item"><img src="<#%= damage.picture_1%>" alt=""></li>
+    <li class="carousel__item"><img src="<#%= damage.picture_2%>" alt=""></li>
+    <li class="carousel__item"><img src="<#%= damage.picture_3%>" alt=""></li>
   </ul>
   <div class="carousel__prev">
     <label for="carousel-4"></label>
@@ -22,4 +22,34 @@
     <label for="carousel-5"></label>
     <label for="carousel-6"></label>
   </div>
-</div>
+</div> -->
+
+
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="<%= damage.picture_1%>" alt="">
+            </div>
+
+            <div class="item">
+              <img src="<%= damage.picture_2%>" alt="">
+            </div>
+
+            <div class="item">
+              <img src="<%= damage.picture_3%>" alt="">
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
