--- a/app/views/shared/_car-photos-carousel.html.erb
+++ b/app/views/shared/_car-photos-carousel.html.erb
@@ -3,7 +3,38 @@
     <%= image_tag "avantgarde-concept-769583-unsplash.jpg", width: 300%>
   </div>
 <% else %>
-  <div class="carousel">
+
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="<%= car.photo_1%>" alt="">
+            </div>
+
+            <div class="item">
+              <img src="<%= car.photo_2%>" alt="">
+            </div>
+
+            <div class="item">
+              <img src="<%= car.photo_3%>" alt="">
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+
+<!--   <div class="carousel">
     <input type="radio" id="carousel-1" name="carousel[]" checked>
     <input type="radio" id="carousel-2" name="carousel[]">
     <input type="radio" id="carousel-3" name="carousel[]">
@@ -27,5 +58,6 @@
        <label for="carousel-2"></label>
        <label for="carousel-3"></label>
     </div>
-  </div>
+  </div> -->
 <% end %>
+
